--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -13,7 +13,13 @@
   "dependencies": {
     "axios": "^1.7.7",
     "backend": "file:",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
+    "passport-saml": "^3.2.4"
   }
 }
