--- a/ui/package.json
+++ b/ui/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "auth-poc-app",
+  "name": "ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "auth-poc-app": "file:",
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
